--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon bin/run | bunyan",
+    "dev": "npm run doc & nodemon bin/run | bunyan",
     "start": "node bin/run | bunyan -o short",
     "doc": "node ./server/swagger.js"
   },
