--- a/package.json
+++ b/package.json
@@ -4,11 +4,27 @@
   "description": "",
   "port": "3000",
   "main": "index.js",
+  "jest": {
+    "verbose": true,
+    "coverageDirectory": "./src/test/coverage",
+    "coverageReporters": [
+      "html",
+      "text"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 100,
+        "functions": 100,
+        "lines": 100,
+        "statements": 100
+      }
+    }
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "cross-env NODE_ENV=test jest --coverage",
     "dev": "npm run doc & nodemon bin/run | bunyan",
-    "start": "node bin/run | bunyan -o short",
-    "doc": "node ./server/swagger.js"
+    "start": "cross-env NODE_ENV=production node bin/run | bunyan -o short",
+    "doc": "node ./src/swagger.js"
   },
   "keywords": [],
   "author": "",
@@ -17,12 +33,15 @@
     "bcrypt": "^5.0.1",
     "bunyan": "^1.8.15",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.5"
   },
   "devDependencies": {
+    "jest": "^28.1.2",
     "nodemon": "^2.0.16",
+    "supertest": "^6.2.4",
     "swagger-autogen": "^2.21.2",
     "swagger-ui-express": "^4.4.0"
   }
