--- a/package.json
+++ b/package.json
@@ -4,24 +4,8 @@
   "description": "",
   "port": "3000",
   "main": "index.js",
-  "jest": {
-    "verbose": true,
-    "coverageDirectory": "./src/test/coverage",
-    "coverageReporters": [
-      "html",
-      "text"
-    ],
-    "coverageThreshold": {
-      "global": {
-        "branches": 100,
-        "functions": 100,
-        "lines": 100,
-        "statements": 100
-      }
-    }
-  },
   "scripts": {
-    "test": "cross-env NODE_ENV=test jest --coverage",
+    "test": "cross-env NODE_ENV=test nyc --reporter=text mocha ./src/test",
     "dev": "npm run doc & nodemon bin/run | bunyan",
     "start": "cross-env NODE_ENV=production node bin/run | bunyan -o short",
     "doc": "node ./src/swagger.js"
@@ -36,10 +20,11 @@
     "cross-env": "^7.0.3",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.5"
+    "mongoose": "^6.3.5",
+    "nyc": "^15.1.0"
   },
   "devDependencies": {
-    "jest": "^28.1.2",
+    "mocha": "^10.0.0",
     "nodemon": "^2.0.16",
     "supertest": "^6.2.4",
     "swagger-autogen": "^2.21.2",
